--- a/5-sem/Numerical-analysis/lab-1/lab1.ipynb
+++ b/5-sem/Numerical-analysis/lab-1/lab1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -377,18 +377,24 @@
       "x_next = nan\n",
       "x_next = nan\n",
       "x_next = nan\n",
-      "x_next = nan\n",
-      "Перевищено максимальну кількість ітерацій.\n",
-      "Корінь методом простої ітерації: nan\n",
-      "Кількість ітерацій: 100001\n"
+      "x_next = nan\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_10600\\540089556.py:2: RuntimeWarning: invalid value encountered in sqrt\n",
+      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_9268\\540089556.py:2: RuntimeWarning: invalid value encountered in sqrt\n",
       "  return np.sqrt(1 - 5 * np.sin(x))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Перевищено максимальну кількість ітерацій.\n",
+      "Корінь методом простої ітерації: nan\n",
+      "Кількість ітерацій: 100001\n"
      ]
     }
    ],
@@ -409,12 +415,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Метод модифікованого Ньютона\n"
+    "## Модифікований метод Ньютона\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -425,6 +431,8 @@
       "Неперервна друга похідна: True\n",
       "Зміна знаку похідної: False\n",
       "Зміна знаку другої похідної: False\n",
+      "f(x0) = 2.257639279480218\n",
+      "ddf(x0) = 4.992360720519782\n",
       "Наявність кореня в похідної на проміжку [a;b]: False\n",
       "Достатня умова збіжності виконується.\n",
       "x_next = -2.2493104647521776\n",
@@ -450,6 +458,10 @@
     "    print(\"Зміна знаку похідної:\", sign_changes_df)\n",
     "    sign_changes_ddf = check_sign_changes(ddf, a, b)\n",
     "    print(\"Зміна знаку другої похідної:\", sign_changes_ddf)\n",
+    "    fx0 = f(x0)\n",
+    "    print(\"f(x0) =\", fx0)\n",
+    "    ddfx0 = ddf(x0)\n",
+    "    print(\"ddf(x0) =\", ddfx0)\n",
     "    has_root_df = has_root(df, a, b)\n",
     "    print(\"Наявність кореня в похідної на проміжку [a;b]:\", has_root_df)\n",
     "\n",
