--- a/5-sem/numerical-analysis/lab-2/lab2.ipynb
+++ b/5-sem/numerical-analysis/lab-2/lab2.ipynb
@@ -18,8 +18,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### І. Написати програму, яка розв’язує систему лінійних алгебраїчних рівнянь двома методами:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Методом квадратних коренів"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,39 +50,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### І. Написати програму, яка розв’язує систему лінійних алгебраїчних рівнянь двома методами:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1. Методом квадратних коренів"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 440,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Input matrix: A - matrix of size n x n\n",
-    "#A = np.array([[1, 2, 3], [2, 5, 5], [3, 5, 6]])\n",
-    "\n",
-    "# Input vector: b - vector of size n\n",
-    "#b = np.array([1, 2, 3])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "##### 0) Перевірки умов:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 478,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 479,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 480,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,12 +283,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 0) Перевірки умов збіжності (Достатню другу: Якщо A = A.T > 0, то iтерацiйний процес методу Зейделя збiгається, при чому швидкiсть збiжностi лiнiйна. Умова припинення: ||xn − xn−1|| ⩽ ε; та необхідну: ![image.png](attachment:image.png)): "
+    "##### 0) Перевірки умов збіжності (Достатню другу: Якщо A = A.T > 0, то iтерацiйний процес методу Зейделя збiгається, при чому швидкiсть збiжностi лiнiйна. Умова припинення: ||xn − xn−1|| ⩽ ε; та: ![image.png](attachment:image.png)): "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 481,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 482,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 483,
    "metadata": {},
    "outputs": [
     {
@@ -438,9 +425,7 @@
      "output_type": "stream",
      "text": [
       "det:\n",
-      "8095852.000000001\n",
-      "np.linalg.det:\n",
-      "8095852.000000006\n"
+      "8095852.000000001\n"
      ]
     }
    ],
@@ -457,8 +442,8 @@
     "print(\"det:\")\n",
     "print(det(A))\n",
     "\n",
-    "print(\"np.linalg.det:\")\n",
-    "print(np.linalg.det(A))"
+    "#print(\"np.linalg.det:\")\n",
+    "#print(np.linalg.det(A))"
    ]
   },
   {
@@ -470,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 484,
    "metadata": {},
    "outputs": [
     {
@@ -478,8 +463,6 @@
      "output_type": "stream",
      "text": [
       "condtion_number:\n",
-      "11.159711911729614\n",
-      "np.linalg.cond:\n",
       "11.159711911729614\n"
      ]
     }
@@ -492,8 +475,8 @@
     "print(\"condtion_number:\")\n",
     "print(condtion_number(A))\n",
     "\n",
-    "print(\"np.linalg.cond:\")\n",
-    "print(np.linalg.cond(A, p=np.inf))"
+    "#print(\"np.linalg.cond:\")\n",
+    "#print(np.linalg.cond(A, p=np.inf))"
    ]
   }
  ],
