--- a/5-sem/numerical-analysis/lab-3/lab-3.ipynb
+++ b/5-sem/numerical-analysis/lab-3/lab-3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -61,8 +61,11 @@
     "    lambda0 = x[m] / x0[m]\n",
     "    print('lambda0 =', lambda0)\n",
     "\n",
-    "    x_norm2 = np.linalg.norm(x, ord=2)\n",
-    "    print('x_norm =', x_norm2)\n",
+    "    if lambda0 > 1:\n",
+    "        x_norm2 = np.linalg.norm(x, ord=2)\n",
+    "        print('x_norm =', x_norm2)\n",
+    "    else:\n",
+    "        x_norm2 = 1\n",
     "\n",
     "    e = x / x_norm2\n",
     "    print('e =', e)\n",
@@ -79,8 +82,11 @@
     "            return lambda1\n",
     "\n",
     "        lambda0 = lambda1\n",
-    "        x_norm2 = np.linalg.norm(x, ord=2)\n",
-    "        print('x_norm =', x_norm2)\n",
+    "        if lambda0 > 1:\n",
+    "            x_norm2 = np.linalg.norm(x, ord=2)\n",
+    "            print('x_norm =', x_norm2)\n",
+    "        else:\n",
+    "            x_norm2 = 1\n",
     "\n",
     "        e = x / x_norm2\n",
     "        print('e =', e)\n",
@@ -98,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -181,129 +187,119 @@
      "output_type": "stream",
      "text": [
       "x = [24 43 58 71 84]\n",
-      "m = 3\n",
-      "lambda0 = 71.0\n",
+      "m = 1\n",
+      "lambda0 = 43.0\n",
       "x_norm = 133.7385509118444\n",
       "e = [0.17945461 0.32152285 0.43368198 0.53088657 0.62809115]\n",
       "-----------------------------------------------------\n",
       "x = [ 9.00263979 18.13239327 26.53685101 35.01608151 45.05058533]\n",
-      "lambda1 = 65.95774647887323\n",
+      "lambda1 = 56.3953488372093\n",
       "x_norm = 66.10383403050363\n",
       "e = [0.13618937 0.27430169 0.40144193 0.52971332 0.68151244]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.64123842 17.3271569  25.6801806  34.76301646 46.79224834]\n",
-      "lambda1 = 65.62609438394192\n",
+      "lambda1 = 63.168247422680416\n",
       "x_norm = 66.57593305096513\n",
       "e = [0.12979523 0.26026157 0.38572769 0.5221559  0.70284029]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.57848356 17.05700166 25.25059176 34.43004044 47.47407519]\n",
-      "lambda1 = 65.9382384235684\n",
+      "lambda1 = 65.5379186985501\n",
       "x_norm = 66.64337603872923\n",
       "e = [0.12872222 0.25594444 0.37889125 0.5166311  0.71236   ]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.56410923 16.96497841 25.06185053 34.21772503 47.78102104]\n",
-      "lambda1 = 66.23241469200404\n",
+      "lambda1 = 66.283832181443\n",
       "x_norm = 66.65680377669791\n",
       "e = [0.12848065 0.25451233 0.37598338 0.51334182 0.71682136]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.55925538 16.93107184 24.98030742 34.09806718 47.92616395]\n",
-      "lambda1 = 66.42370792391552\n",
+      "lambda1 = 66.52358207058609\n",
       "x_norm = 66.65983184483105\n",
       "e = [0.12840199 0.25399212 0.37474303 0.51152345 0.71896617]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.55715792 16.91749803 24.94482236 34.03380595 47.99644364]\n",
-      "lambda1 = 66.53420470398669\n",
+      "lambda1 = 66.60638999143727\n",
       "x_norm = 66.66055358182082\n",
       "e = [0.12836914 0.25378574 0.37420665 0.51055391 0.72001268]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.55616183 16.91167176 24.92913325 34.00013225 48.03092493]\n",
-      "lambda1 = 66.59459833689955\n",
+      "lambda1 = 66.63759613826194\n",
       "x_norm = 66.66073037521711\n",
       "e = [0.12835386 0.25369767 0.3739703  0.5100474  0.72052803]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.55567456 16.90903891 24.92206347 33.98273617 48.04797666]\n",
-      "lambda1 = 66.62662358539325\n",
+      "lambda1 = 66.65035246702566\n",
       "x_norm = 66.66077429512293\n",
       "e = [0.12834646 0.253658   0.373864   0.5097861  0.72078336]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.5554338  16.90780652 24.91881576 33.97382877 48.05645124]\n",
-      "lambda1 = 66.64330148737353\n",
+      "lambda1 = 66.65591584840777\n",
       "x_norm = 66.6607852864716\n",
       "e = [0.12834283 0.25363947 0.37381521 0.50965239 0.72091037]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.5553143  16.90721613 24.91729699 33.96929435 48.06067681]\n",
-      "lambda1 = 66.6518882064809\n",
+      "lambda1 = 66.65845758204593\n",
       "x_norm = 66.66078804782171\n",
       "e = [0.12834103 0.25363061 0.37379242 0.50958435 0.72097373]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.55525481 16.90692896 24.91657563 33.96699512 48.06278837]\n",
-      "lambda1 = 66.65627606089532\n",
+      "lambda1 = 66.65965582970898\n",
       "x_norm = 66.66078874297142\n",
       "e = [0.12834014 0.2536263  0.37378159 0.50954985 0.7210054 ]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.55522513 16.90678788 24.91622854 33.96583242 48.06384514]\n",
-      "lambda1 = 66.65850693028575\n",
+      "lambda1 = 66.66023249913124\n",
       "x_norm = 66.6607889181588\n",
       "e = [0.12833969 0.25362418 0.37377638 0.50953241 0.72102125]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.5552103  16.90671811 24.91605978 33.96524557 48.06437457]\n",
-      "lambda1 = 66.6596371875256\n",
+      "lambda1 = 66.66051381119283\n",
       "x_norm = 66.66078896233354\n",
       "e = [0.12833947 0.25362313 0.37377385 0.50952361 0.72102919]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.55520288 16.90668344 24.91597706 33.96494978 48.06464   ]\n",
-      "lambda1 = 66.660208426546\n",
+      "lambda1 = 66.66065227920213\n",
       "x_norm = 66.66078897347585\n",
       "e = [0.12833936 0.25362261 0.37377261 0.50951917 0.72103317]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.55519916 16.90666617 24.91593626 33.96480083 48.06477316]\n",
-      "lambda1 = 66.66049663523354\n",
+      "lambda1 = 66.66072084992544\n",
       "x_norm = 66.66078897628677\n",
       "e = [0.1283393  0.25362235 0.373772   0.50951693 0.72103517]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.5551973  16.90665753 24.91591604 33.96472587 48.06483997]\n",
-      "lambda1 = 66.66064186675705\n",
+      "lambda1 = 66.66075494797933\n",
       "x_norm = 66.66078897699592\n",
       "e = [0.12833927 0.25362222 0.37377169 0.50951581 0.72103617]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.55519636 16.90665322 24.91590598 33.96468817 48.06487351]\n",
-      "lambda1 = 66.66071498591029\n",
+      "lambda1 = 66.66077195288119\n",
       "x_norm = 66.66078897717486\n",
       "e = [0.12833926 0.25362216 0.37377154 0.50951524 0.72103667]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.5551959  16.90665105 24.91590097 33.96466922 48.06489035]\n",
-      "lambda1 = 66.66075177555055\n",
+      "lambda1 = 66.66078045058748\n",
       "x_norm = 66.66078897722\n",
       "e = [0.12833925 0.25362213 0.37377147 0.50951496 0.72103693]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.55519566 16.90664997 24.91589846 33.96465969 48.06489881]\n",
-      "lambda1 = 66.66077027764803\n",
+      "lambda1 = 66.66078470321203\n",
       "x_norm = 66.66078897723138\n",
       "e = [0.12833925 0.25362211 0.37377143 0.50951482 0.72103705]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.55519554 16.90664943 24.91589721 33.9646549  48.06490305]\n",
-      "lambda1 = 66.66077957956824\n",
+      "lambda1 = 66.66078683361431\n",
       "x_norm = 66.66078897723428\n",
       "e = [0.12833925 0.2536221  0.37377141 0.50951475 0.72103712]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.55519548 16.90664915 24.91589658 33.96465249 48.06490518]\n",
-      "lambda1 = 66.66078425498375\n",
+      "lambda1 = 66.66078790165842\n",
       "x_norm = 66.66078897723497\n",
       "e = [0.12833925 0.2536221  0.3737714  0.50951471 0.72103715]\n",
       "-----------------------------------------------------\n",
       "x = [ 8.55519545 16.90664902 24.91589626 33.96465129 48.06490625]\n",
-      "lambda1 = 66.66078660457578\n",
-      "x_norm = 66.66078897723519\n",
-      "e = [0.12833925 0.2536221  0.3737714  0.50951469 0.72103716]\n",
-      "-----------------------------------------------------\n",
-      "x = [ 8.55519544 16.90664895 24.91589611 33.96465068 48.06490679]\n",
-      "lambda1 = 66.66078778519561\n",
-      "x_norm = 66.66078897723521\n",
-      "e = [0.12833925 0.25362209 0.3737714  0.50951468 0.72103717]\n",
-      "-----------------------------------------------------\n",
-      "x = [ 8.55519543 16.90664891 24.91589603 33.96465037 48.06490706]\n",
-      "lambda1 = 66.66078837837776\n",
-      "Max eigenvalue: 66.66078837837776\n"
+      "lambda1 = 66.66078843739314\n",
+      "Max eigenvalue: 66.66078843739314\n"
      ]
     }
    ],
@@ -313,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
