--- a/5-sem/system-modelling/lab-2/lab-2.ipynb
+++ b/5-sem/system-modelling/lab-2/lab-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,30 +66,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "delta: 0.001\n",
-      "A0: [[-0.94444283  0.44444377]\n",
-      " [-0.11111089  0.11111102]\n",
-      " [ 0.72222106 -0.22222174]]\n",
-      "delta: 0.0005\n",
-      "A1: [[-0.94444404  0.44444428]\n",
-      " [-0.11111106  0.11111109]\n",
-      " [ 0.72222193 -0.2222221 ]]\n",
-      "delta: 0.00025\n",
-      "A1: [[-0.94444434  0.4444444 ]\n",
-      " [-0.1111111   0.11111111]\n",
-      " [ 0.72222215 -0.22222219]]\n",
+      "delta: 5\n",
+      "A0: [[-0.00880162  0.04197698]\n",
+      " [ 0.01489506  0.04434665]\n",
+      " [ 0.03859174  0.04671632]]\n",
+      "delta: 2.5\n",
+      "A1: [[-0.06761734  0.0740391 ]\n",
+      " [ 0.00982151  0.05628482]\n",
+      " [ 0.08726036  0.03853055]]\n",
+      "delta: 1.25\n",
+      "A1: [[-0.24889378  0.15229405]\n",
+      " [-0.01447423  0.06953922]\n",
+      " [ 0.21994533 -0.0132156 ]]\n",
+      "delta: 0.625\n",
+      "A1: [[-0.56421046  0.28497941]\n",
+      " [-0.05818039  0.08866413]\n",
+      " [ 0.44784967 -0.10765115]]\n",
+      "delta: 0.3125\n",
+      "A1: [[-0.80930643  0.38779137]\n",
+      " [-0.09228987  0.10315847]\n",
+      " [ 0.62472668 -0.18147444]]\n",
+      "delta: 0.15625\n",
+      "A1: [[-0.90667952  0.42861403]\n",
+      " [-0.10585078  0.10889048]\n",
+      " [ 0.69497795 -0.21083308]]\n",
+      "delta: 0.078125\n",
+      "A1: [[-0.93471669  0.44036684]\n",
+      " [-0.10975608  0.11053922]\n",
+      " [ 0.71520454 -0.2192884 ]]\n",
+      "delta: 0.0390625\n",
+      "A1: [[-0.94199391  0.44341726]\n",
+      " [-0.11076976  0.11096705]\n",
+      " [ 0.72045439 -0.22148315]]\n",
+      "delta: 0.01953125\n",
+      "A1: [[-0.94383064  0.44418716]\n",
+      " [-0.11102561  0.11107503]\n",
+      " [ 0.72177942 -0.2220371 ]]\n",
+      "delta: 0.009765625\n",
+      "A1: [[-0.94429092  0.44438009]\n",
+      " [-0.11108973  0.11110209]\n",
+      " [ 0.72211147 -0.22217592]]\n",
+      "delta: 0.0048828125\n",
+      "A1: [[-0.94440606  0.44442835]\n",
+      " [-0.11110576  0.11110885]\n",
+      " [ 0.72219453 -0.22221065]]\n",
+      "delta: 0.00244140625\n",
+      "A1: [[-0.94443485  0.44444042]\n",
+      " [-0.11110977  0.11111055]\n",
+      " [ 0.7222153  -0.22221933]]\n",
+      "delta: 0.001220703125\n",
+      "A1: [[-0.94444205  0.44444344]\n",
+      " [-0.11111078  0.11111097]\n",
+      " [ 0.72222049 -0.2222215 ]]\n",
+      "delta: 0.0006103515625\n",
+      "A1: [[-0.94444384  0.44444419]\n",
+      " [-0.11111103  0.11111108]\n",
+      " [ 0.72222179 -0.22222204]]\n",
+      "delta: 0.00030517578125\n",
+      "A1: [[-0.94444429  0.44444438]\n",
+      " [-0.11111109  0.1111111 ]\n",
+      " [ 0.72222211 -0.22222218]]\n",
       "Atest: [[1 2 3]\n",
       " [4 5 6]]\n",
-      "Atest_pinv: [[-0.94444434  0.4444444 ]\n",
-      " [-0.1111111   0.11111111]\n",
-      " [ 0.72222215 -0.22222219]]\n"
+      "Atest_pinv: [[-0.94444429  0.44444438]\n",
+      " [-0.11111109  0.1111111 ]\n",
+      " [ 0.72222211 -0.22222218]]\n"
      ]
     }
    ],
@@ -132,6 +180,58 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not broadcast input array from shape (3,) into shape (2,)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32md:\\uni\\5-sem\\system-modelling\\lab-2\\lab-2.ipynb Cell 6\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39m# Test\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m Atest \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([[\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m], [\u001b[39m4\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m6\u001b[39m]])\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m Atest_pinv \u001b[39m=\u001b[39m PseudoInverseMatrix_Greville(Atest)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mAtest:\u001b[39m\u001b[39m'\u001b[39m, Atest)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mAtest_pinv:\u001b[39m\u001b[39m'\u001b[39m, Atest_pinv)\n",
+      "\u001b[1;32md:\\uni\\5-sem\\system-modelling\\lab-2\\lab-2.ipynb Cell 6\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m         A_pinv[i, :] \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m         A_pinv[i, :] \u001b[39m=\u001b[39m a\u001b[39m.\u001b[39mT \u001b[39m/\u001b[39m np\u001b[39m.\u001b[39mdot(a\u001b[39m.\u001b[39mT, a)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     Z \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39meye(i) \u001b[39m-\u001b[39m np\u001b[39m.\u001b[39mdot(A_pinv[:i, :], A[:i, :])\n",
+      "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (3,) into shape (2,)"
+     ]
+    }
+   ],
+   "source": [
+    "def PseudoInverseMatrix_Greville(A):\n",
+    "    # Calculate the Greville pseudo-inverse of a matrix\n",
+    "    # A: input matrix\n",
+    "    # returns: pseudo-inverse of A\n",
+    "    # eps: tolerance for zero singular values\n",
+    "    m, n = A.shape\n",
+    "    A_pinv = np.zeros((n, m))\n",
+    "\n",
+    "    for i in range(m):\n",
+    "        a = A[i, :].reshape(-1, 1)\n",
+    "        if i == 0:\n",
+    "            if np.all(a == 0):\n",
+    "                A_pinv[i, :] = 0\n",
+    "            else:\n",
+    "                A_pinv[i, :] = a.T / np.dot(a.T, a)\n",
+    "        else:\n",
+    "            Z = np.eye(i) - np.dot(A_pinv[:i, :], A[:i, :])\n",
+    "            if np.dot(a.T, Z) @ a > 0:\n",
+    "                A_pinv[i, :] = np.dot(Z, a) / np.dot(a.T, Z @ a)\n",
+    "            else:\n",
+    "                R = np.dot(A_pinv[:i, :], (A_pinv[:i, :]).T)\n",
+    "                A_pinv[i, :] = np.dot(R, a) / (1 + np.dot(a.T, R @ a))\n",
+    "\n",
+    "    return A_pinv\n",
+    "\n",
+    "# Test\n",
+    "Atest = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "Atest_pinv = PseudoInverseMatrix_Greville(Atest)\n",
+    "print('Atest:', Atest)\n",
+    "print('Atest_pinv:', Atest_pinv)\n",
+    "assert isPsevdoInversed(Atest, Atest_pinv)"
+   ]
   }
  ],
  "metadata": {
