--- a/5-sem/system-modelling/lab-2/lab-2.ipynb
+++ b/5-sem/system-modelling/lab-2/lab-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -176,54 +176,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not broadcast input array from shape (3,) into shape (2,)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32md:\\uni\\5-sem\\system-modelling\\lab-2\\lab-2.ipynb Cell 6\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39m# Test\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m Atest \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([[\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m], [\u001b[39m4\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m6\u001b[39m]])\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m Atest_pinv \u001b[39m=\u001b[39m PseudoInverseMatrix_Greville(Atest)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mAtest:\u001b[39m\u001b[39m'\u001b[39m, Atest)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mAtest_pinv:\u001b[39m\u001b[39m'\u001b[39m, Atest_pinv)\n",
-      "\u001b[1;32md:\\uni\\5-sem\\system-modelling\\lab-2\\lab-2.ipynb Cell 6\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m         A_pinv[i, :] \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m         A_pinv[i, :] \u001b[39m=\u001b[39m a\u001b[39m.\u001b[39mT \u001b[39m/\u001b[39m np\u001b[39m.\u001b[39mdot(a\u001b[39m.\u001b[39mT, a)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W4sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     Z \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39meye(i) \u001b[39m-\u001b[39m np\u001b[39m.\u001b[39mdot(A_pinv[:i, :], A[:i, :])\n",
-      "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (3,) into shape (2,)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Atest: [[1 2 3]\n",
+      " [4 5 6]]\n",
+      "Atest_pinv: [[-0.94444444  0.44444444]\n",
+      " [-0.11111111  0.11111111]\n",
+      " [ 0.72222222 -0.22222222]]\n"
      ]
     }
    ],
    "source": [
-    "def PseudoInverseMatrix_Greville(A):\n",
+    "def PseudoInverseMatrix_Greville(A, eps = 0.001):\n",
     "    # Calculate the Greville pseudo-inverse of a matrix\n",
     "    # A: input matrix\n",
     "    # returns: pseudo-inverse of A\n",
     "    # eps: tolerance for zero singular values\n",
-    "    m, n = A.shape\n",
-    "    A_pinv = np.zeros((n, m))\n",
+    "    inverse_matrix = np.vstack(A[0] / np.dot(A[0].T, A[0]) if np.dot(A[0].T, A[0]) != 0 else A[0])\n",
+    "    current_matrix = np.array([A[0]])\n",
+    "    n = A.shape[0]\n",
+    "    for i in range(1, n):\n",
+    "        a = A[i].reshape(-1, 1)\n",
+    "        z = np.identity(current_matrix.shape[1]) - np.dot(inverse_matrix, current_matrix)\n",
+    "        current_matrix = np.vstack([current_matrix, A[i]])\n",
     "\n",
-    "    for i in range(m):\n",
-    "        a = A[i, :].reshape(-1, 1)\n",
-    "        if i == 0:\n",
-    "            if np.all(a == 0):\n",
-    "                A_pinv[i, :] = 0\n",
-    "            else:\n",
-    "                A_pinv[i, :] = a.T / np.dot(a.T, a)\n",
+    "        denum = np.dot(a.T, np.dot(z, a))[0, 0]\n",
+    "        if np.abs(denum) < eps:\n",
+    "            r = np.dot(inverse_matrix, inverse_matrix.T)\n",
+    "            denum = 1 + np.dot(a.T, np.dot(r, a))\n",
+    "            inverse_matrix = np.hstack((inverse_matrix - np.dot(z, np.dot(a, np.dot(a.T, inverse_matrix))) / denum, np.dot(r, a) / denum))\n",
     "        else:\n",
-    "            Z = np.eye(i) - np.dot(A_pinv[:i, :], A[:i, :])\n",
-    "            if np.dot(a.T, Z) @ a > 0:\n",
-    "                A_pinv[i, :] = np.dot(Z, a) / np.dot(a.T, Z @ a)\n",
-    "            else:\n",
-    "                R = np.dot(A_pinv[:i, :], (A_pinv[:i, :]).T)\n",
-    "                A_pinv[i, :] = np.dot(R, a) / (1 + np.dot(a.T, R @ a))\n",
+    "            inverse_matrix = np.hstack((inverse_matrix - np.dot(z, np.dot(a, np.dot(a.T, inverse_matrix))) / denum, np.dot(z, a) / denum))\n",
     "\n",
-    "    return A_pinv\n",
+    "    return inverse_matrix\n",
     "\n",
     "# Test\n",
     "Atest = np.array([[1, 2, 3], [4, 5, 6]])\n",
