--- a/5-sem/system-modelling/lab-2/lab-2.ipynb
+++ b/5-sem/system-modelling/lab-2/lab-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -176,13 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "-------------------------------------------------------------\n",
+      "inverse_matrix: [[-0.94444444  0.44444444]\n",
+      " [-0.11111111  0.11111111]\n",
+      " [ 0.72222222 -0.22222222]]\n",
       "Atest: [[1 2 3]\n",
       " [4 5 6]]\n",
       "Atest_pinv: [[-0.94444444  0.44444444]\n",
@@ -192,7 +196,7 @@
     }
    ],
    "source": [
-    "def PseudoInverseMatrix_Greville(A, eps = 0.001):\n",
+    "def PseudoInverseMatrix_Greville(A, eps=1e-6):\n",
     "    # Calculate the Greville pseudo-inverse of a matrix\n",
     "    # A: input matrix\n",
     "    # returns: pseudo-inverse of A\n",
@@ -213,6 +217,9 @@
     "        else:\n",
     "            inverse_matrix = np.hstack((inverse_matrix - np.dot(z, np.dot(a, np.dot(a.T, inverse_matrix))) / denum, np.dot(z, a) / denum))\n",
     "\n",
+    "        print('-------------------------------------------------------------')\n",
+    "        print('inverse_matrix:', inverse_matrix)\n",
+    "\n",
     "    return inverse_matrix\n",
     "\n",
     "# Test\n",
@@ -221,6 +228,20 @@
     "print('Atest:', Atest)\n",
     "print('Atest_pinv:', Atest_pinv)\n",
     "assert isPsevdoInversed(Atest, Atest_pinv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def CalculateOperator(X, Y, inversion_function, V=np.ones(10, 10), eps=1e-6):\n",
+    "    X_pinv = inversion_function(X, eps=eps)\n",
+    "    YX_pinv = Y @ X_pinv\n",
+    "    VZTXT = V @ (np.eye(X.shape[1]) - X & X_pinv).T\n",
+    "    A = YX_pinv @ VZTXT\n",
+    "    return A"
    ]
   }
  ],
