--- a/5-sem/system-modelling/lab-2/lab-2.ipynb
+++ b/5-sem/system-modelling/lab-2/lab-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -25,13 +25,14 @@
     }
    ],
    "source": [
-    "# Read the .bmp input and output files as a numpy 2D matrix\n",
-    "X = imageio.imread('x1.bmp')\n",
-    "# Convert the image to a NumPy array\n",
-    "X = np.array(X)\n",
+    "def read_image(filename):\n",
+    "    # Read the .bmp input and output files as a numpy 2D matrix\n",
+    "    X = imageio.imread(filename)\n",
+    "    # Convert the image to a NumPy array\n",
+    "    return np.array(X)\n",
     "\n",
-    "Y = imageio.imread('y4.bmp')\n",
-    "Y = np.array(Y)\n",
+    "X = read_image('x1.bmp')\n",
+    "Y = read_image('y4.bmp')\n",
     "\n",
     "print('X shape:', X.shape)\n",
     "print('Y shape:', Y.shape)"
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,83 +67,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "delta: 5\n",
-      "A0: [[-0.00880162  0.04197698]\n",
-      " [ 0.01489506  0.04434665]\n",
-      " [ 0.03859174  0.04671632]]\n",
-      "delta: 2.5\n",
-      "A1: [[-0.06761734  0.0740391 ]\n",
-      " [ 0.00982151  0.05628482]\n",
-      " [ 0.08726036  0.03853055]]\n",
-      "delta: 1.25\n",
-      "A1: [[-0.24889378  0.15229405]\n",
-      " [-0.01447423  0.06953922]\n",
-      " [ 0.21994533 -0.0132156 ]]\n",
-      "delta: 0.625\n",
-      "A1: [[-0.56421046  0.28497941]\n",
-      " [-0.05818039  0.08866413]\n",
-      " [ 0.44784967 -0.10765115]]\n",
-      "delta: 0.3125\n",
-      "A1: [[-0.80930643  0.38779137]\n",
-      " [-0.09228987  0.10315847]\n",
-      " [ 0.62472668 -0.18147444]]\n",
-      "delta: 0.15625\n",
-      "A1: [[-0.90667952  0.42861403]\n",
-      " [-0.10585078  0.10889048]\n",
-      " [ 0.69497795 -0.21083308]]\n",
-      "delta: 0.078125\n",
-      "A1: [[-0.93471669  0.44036684]\n",
-      " [-0.10975608  0.11053922]\n",
-      " [ 0.71520454 -0.2192884 ]]\n",
-      "delta: 0.0390625\n",
-      "A1: [[-0.94199391  0.44341726]\n",
-      " [-0.11076976  0.11096705]\n",
-      " [ 0.72045439 -0.22148315]]\n",
-      "delta: 0.01953125\n",
-      "A1: [[-0.94383064  0.44418716]\n",
-      " [-0.11102561  0.11107503]\n",
-      " [ 0.72177942 -0.2220371 ]]\n",
-      "delta: 0.009765625\n",
-      "A1: [[-0.94429092  0.44438009]\n",
-      " [-0.11108973  0.11110209]\n",
-      " [ 0.72211147 -0.22217592]]\n",
-      "delta: 0.0048828125\n",
-      "A1: [[-0.94440606  0.44442835]\n",
-      " [-0.11110576  0.11110885]\n",
-      " [ 0.72219453 -0.22221065]]\n",
-      "delta: 0.00244140625\n",
-      "A1: [[-0.94443485  0.44444042]\n",
-      " [-0.11110977  0.11111055]\n",
-      " [ 0.7222153  -0.22221933]]\n",
-      "delta: 0.001220703125\n",
-      "A1: [[-0.94444205  0.44444344]\n",
-      " [-0.11111078  0.11111097]\n",
-      " [ 0.72222049 -0.2222215 ]]\n",
-      "delta: 0.0006103515625\n",
-      "A1: [[-0.94444384  0.44444419]\n",
-      " [-0.11111103  0.11111108]\n",
-      " [ 0.72222179 -0.22222204]]\n",
-      "delta: 0.00030517578125\n",
-      "A1: [[-0.94444429  0.44444438]\n",
-      " [-0.11111109  0.1111111 ]\n",
-      " [ 0.72222211 -0.22222218]]\n",
-      "Atest: [[1 2 3]\n",
-      " [4 5 6]]\n",
-      "Atest_pinv: [[-0.94444429  0.44444438]\n",
-      " [-0.11111109  0.1111111 ]\n",
-      " [ 0.72222211 -0.22222218]]\n"
+      "delta: 100\n",
+      "A0: [[9.37890220e-05 4.88138279e-04 4.84470269e-04]\n",
+      " [1.93322168e-04 3.87343169e-04 5.83382952e-04]\n",
+      " [2.91846576e-04 4.84567330e-04 6.79733424e-04]\n",
+      " [3.90370984e-04 5.81791490e-04 7.76083896e-04]]\n",
+      "delta: 50.0\n",
+      "A1: [[0.00030872 0.00182555 0.00177166]\n",
+      " [0.00070181 0.0014139  0.00215566]\n",
+      " [0.0010801  0.00177309 0.002502  ]\n",
+      " [0.00145839 0.00213228 0.00284834]]\n",
+      "delta: 25.0\n",
+      "A1: [[0.00049899 0.00589029 0.00524099]\n",
+      " [0.00201349 0.00415113 0.00664719]\n",
+      " [0.00335063 0.00525824 0.00759871]\n",
+      " [0.00468777 0.00636535 0.00855023]]\n",
+      "delta: 12.5\n",
+      "A1: [[-0.00243571  0.01489135  0.00970429]\n",
+      " [ 0.00320862  0.00742003  0.01452219]\n",
+      " [ 0.0074663   0.00984364  0.01567902]\n",
+      " [ 0.01172399  0.01226726  0.01683586]]\n",
+      "delta: 6.25\n",
+      "A1: [[-0.02052581  0.0350772   0.00847928]\n",
+      " [-0.00027739  0.00481035  0.02527169]\n",
+      " [ 0.01347158  0.00922601  0.02271238]\n",
+      " [ 0.02722055  0.01364166  0.02015306]]\n",
+      "delta: 3.125\n",
+      "A1: [[-0.08102527  0.09131497 -0.0075194 ]\n",
+      " [-0.01965688 -0.01628726  0.05183723]\n",
+      " [ 0.02602417 -0.0042992   0.03126702]\n",
+      " [ 0.07170522  0.00768886  0.0106968 ]]\n",
+      "delta: 1.5625\n",
+      "A1: [[-0.19414587  0.20878744 -0.05083688]\n",
+      " [-0.08868746 -0.09165597  0.13776081]\n",
+      " [ 0.04466495 -0.03874088  0.05093617]\n",
+      " [ 0.17801736  0.01417421 -0.03588846]]\n",
+      "delta: 0.78125\n",
+      "A1: [[-0.27015356  0.34445272 -0.1234578 ]\n",
+      " [-0.25766612 -0.2736293   0.34451392]\n",
+      " [ 0.04395292 -0.08908612  0.0898152 ]\n",
+      " [ 0.34557196  0.09545707 -0.16488352]]\n",
+      "delta: 0.390625\n",
+      "A1: [[-0.27025332  0.43977639 -0.19599336]\n",
+      " [-0.46264978 -0.49311381  0.59417152]\n",
+      " [ 0.0220183  -0.13433272  0.13316275]\n",
+      " [ 0.50668638  0.22444837 -0.32784601]]\n",
+      "delta: 0.1953125\n",
+      "A1: [[-0.25731569  0.48215866 -0.23347091]\n",
+      " [-0.5747768  -0.61299254  0.73058346]\n",
+      " [ 0.00705131 -0.15684512  0.15634483]\n",
+      " [ 0.58887942  0.2993023  -0.4178938 ]]\n",
+      "delta: 0.09765625\n",
+      "A1: [[-0.25201755  0.49531331 -0.24561946]\n",
+      " [-0.61165213 -0.65240266  0.77543336]\n",
+      " [ 0.00189077 -0.16406901  0.16392639]\n",
+      " [ 0.61543366  0.32426464 -0.44758058]]\n",
+      "delta: 0.048828125\n",
+      "A1: [[-2.50517180e-01  4.98813091e-01 -2.48888115e-01]\n",
+      " [-6.21609565e-01 -6.63043593e-01  7.87543369e-01]\n",
+      " [ 4.81341407e-04 -1.66007659e-01  1.65970812e-01]\n",
+      " [ 6.22572247e-01  3.31028276e-01 -4.55601744e-01]]\n",
+      "delta: 0.0244140625\n",
+      "A1: [[-2.50130111e-01  4.99702302e-01 -2.49720961e-01]\n",
+      " [-6.24148982e-01 -6.65757260e-01  7.90631700e-01]\n",
+      " [ 1.20887035e-04 -1.66501303e-01  1.66492015e-01]\n",
+      " [ 6.24390756e-01  3.32754653e-01 -4.57647669e-01]]\n",
+      "delta: 0.01220703125\n",
+      "A1: [[-2.50032579e-01  4.99925515e-01 -2.49930173e-01]\n",
+      " [-6.24787031e-01 -6.66439086e-01  7.91407665e-01]\n",
+      " [ 3.02564156e-05 -1.66625287e-01  1.66622961e-01]\n",
+      " [ 6.24847544e-01  3.33188512e-01 -4.58161743e-01]]\n",
+      "delta: 0.006103515625\n",
+      "A1: [[-2.50008148e-01  4.99981375e-01 -2.49982539e-01]\n",
+      " [-6.24946744e-01 -6.66609757e-01  7.91601900e-01]\n",
+      " [ 7.56627273e-06 -1.66656319e-01  1.66655737e-01]\n",
+      " [ 6.24961877e-01  3.33297118e-01 -4.58290425e-01]]\n",
+      "delta: 0.0030517578125\n",
+      "A1: [[-2.50002037e-01  4.99995343e-01 -2.49995635e-01]\n",
+      " [-6.24986685e-01 -6.66652438e-01  7.91650474e-01]\n",
+      " [ 1.89170378e-06 -1.66664080e-01  1.66663934e-01]\n",
+      " [ 6.24990469e-01  3.33324279e-01 -4.58322606e-01]]\n",
+      "delta: 0.00152587890625\n",
+      "A1: [[-2.50000509e-01  4.99998836e-01 -2.49998909e-01]\n",
+      " [-6.24996671e-01 -6.66663110e-01  7.91662618e-01]\n",
+      " [ 4.72934420e-07 -1.66666020e-01  1.66665984e-01]\n",
+      " [ 6.24997617e-01  3.33331070e-01 -4.58330651e-01]]\n",
+      "delta: 0.000762939453125\n",
+      "A1: [[-2.50000127e-01  4.99999709e-01 -2.49999727e-01]\n",
+      " [-6.24999168e-01 -6.66665777e-01  7.91665655e-01]\n",
+      " [ 1.18234133e-07 -1.66666505e-01  1.66666496e-01]\n",
+      " [ 6.24999404e-01  3.33332767e-01 -4.58332663e-01]]\n",
+      "delta: 0.0003814697265625\n",
+      "A1: [[-2.50000032e-01  4.99999927e-01 -2.49999932e-01]\n",
+      " [-6.24999792e-01 -6.66666444e-01  7.91666414e-01]\n",
+      " [ 2.95585649e-08 -1.66666626e-01  1.66666624e-01]\n",
+      " [ 6.24999851e-01  3.33333192e-01 -4.58333166e-01]]\n",
+      "delta: 0.00019073486328125\n",
+      "A1: [[-2.50000008e-01  4.99999982e-01 -2.49999983e-01]\n",
+      " [-6.24999948e-01 -6.66666611e-01  7.91666603e-01]\n",
+      " [ 7.38964301e-09 -1.66666657e-01  1.66666656e-01]\n",
+      " [ 6.24999963e-01  3.33333298e-01 -4.58333291e-01]]\n",
+      "Atest: [[1 2 3 4]\n",
+      " [5 4 5 6]\n",
+      " [5 6 7 8]]\n",
+      "Atest_pinv: [[-2.50000008e-01  4.99999982e-01 -2.49999983e-01]\n",
+      " [-6.24999948e-01 -6.66666611e-01  7.91666603e-01]\n",
+      " [ 7.38964301e-09 -1.66666657e-01  1.66666656e-01]\n",
+      " [ 6.24999963e-01  3.33333298e-01 -4.58333291e-01]]\n"
      ]
     }
    ],
    "source": [
-    "def PseudoInverseMatrix_MoorePenrose(A, eps=1e-6, delta=5):\n",
+    "def PseudoInverseMatrix_MoorePenrose(A, eps=1e-6, delta=10):\n",
     "    # Calculate the Moore-Penrose pseudo-inverse of a matrix\n",
     "    # A: input matrix\n",
     "    # returns: pseudo-inverse of A\n",
@@ -167,8 +210,8 @@
     "        A0 = A1\n",
     "\n",
     "# Test\n",
-    "Atest = np.array([[1, 2, 3], [4, 5, 6]])\n",
-    "Atest_pinv = PseudoInverseMatrix_MoorePenrose(Atest)\n",
+    "Atest = np.array([[1, 2, 3, 4], [5, 4, 5, 6], [5, 6, 7, 8]])\n",
+    "Atest_pinv = PseudoInverseMatrix_MoorePenrose(Atest, delta=100)\n",
     "print('Atest:', Atest)\n",
     "print('Atest_pinv:', Atest_pinv)\n",
     "assert isPsevdoInversed(Atest, Atest_pinv)"
@@ -176,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -184,14 +227,22 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------------------------------\n",
-      "inverse_matrix: [[-0.94444444  0.44444444]\n",
-      " [-0.11111111  0.11111111]\n",
-      " [ 0.72222222 -0.22222222]]\n",
-      "Atest: [[1 2 3]\n",
-      " [4 5 6]]\n",
-      "Atest_pinv: [[-0.94444444  0.44444444]\n",
-      " [-0.11111111  0.11111111]\n",
-      " [ 0.72222222 -0.22222222]]\n"
+      "inverse_matrix: [[-0.44382022  0.2752809 ]\n",
+      " [-0.01123596  0.04494382]\n",
+      " [ 0.12921348 -0.01685393]\n",
+      " [ 0.26966292 -0.07865169]]\n",
+      "-------------------------------------------------------------\n",
+      "inverse_matrix: [[-2.50000000e-01  5.00000000e-01 -2.50000000e-01]\n",
+      " [-6.25000000e-01 -6.66666667e-01  7.91666667e-01]\n",
+      " [-6.10622664e-15 -1.66666667e-01  1.66666667e-01]\n",
+      " [ 6.25000000e-01  3.33333333e-01 -4.58333333e-01]]\n",
+      "Atest: [[1 2 3 4]\n",
+      " [5 4 5 6]\n",
+      " [5 6 7 8]]\n",
+      "Atest_pinv: [[-2.50000000e-01  5.00000000e-01 -2.50000000e-01]\n",
+      " [-6.25000000e-01 -6.66666667e-01  7.91666667e-01]\n",
+      " [-6.10622664e-15 -1.66666667e-01  1.66666667e-01]\n",
+      " [ 6.25000000e-01  3.33333333e-01 -4.58333333e-01]]\n"
      ]
     }
    ],
@@ -223,7 +274,7 @@
     "    return inverse_matrix\n",
     "\n",
     "# Test\n",
-    "Atest = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "Atest = np.array([[1, 2, 3, 4], [5, 4, 5, 6], [5, 6, 7, 8]])\n",
     "Atest_pinv = PseudoInverseMatrix_Greville(Atest)\n",
     "print('Atest:', Atest)\n",
     "print('Atest_pinv:', Atest_pinv)\n",
@@ -232,17 +283,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def CalculateOperator(X, Y, inversion_function, V=np.ones(10, 10), eps=1e-6):\n",
+    "def CalculateOperator(X, Y, inversion_function, V=None, eps=1e-6):\n",
+    "    if V is None:\n",
+    "        V = np.zeros(X.shape[1], X.shape[1])\n",
+    "\n",
     "    X_pinv = inversion_function(X, eps=eps)\n",
+    "    assert isPsevdoInversed(X, X_pinv)\n",
+    "        \n",
     "    YX_pinv = Y @ X_pinv\n",
-    "    VZTXT = V @ (np.eye(X.shape[1]) - X & X_pinv).T\n",
+    "    VZTXT = V @ (np.eye(X.shape[1]) - X @ X_pinv).T\n",
     "    A = YX_pinv @ VZTXT\n",
     "    return A"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X: [[0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 2. 1. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [1. 1. 1. ... 1. 1. 1.]]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Cannot interpret '188' as a data type",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\uni\\5-sem\\system-modelling\\lab-2\\lab-2.ipynb Cell 7\u001b[0m line \u001b[0;36m9\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m X \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mvstack((X, np\u001b[39m.\u001b[39mones((\u001b[39m1\u001b[39m, m))))\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mX:\u001b[39m\u001b[39m'\u001b[39m, X)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W6sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m A \u001b[39m=\u001b[39m CalculateOperator(X, Y, PseudoInverseMatrix_MoorePenrose)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W6sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mA:\u001b[39m\u001b[39m'\u001b[39m, A)\n",
+      "\u001b[1;32md:\\uni\\5-sem\\system-modelling\\lab-2\\lab-2.ipynb Cell 7\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mCalculateOperator\u001b[39m(X, Y, inversion_function, V\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, eps\u001b[39m=\u001b[39m\u001b[39m1e-6\u001b[39m):\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mif\u001b[39;00m V \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m         V \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mzeros(X\u001b[39m.\u001b[39;49mshape[\u001b[39m1\u001b[39;49m], X\u001b[39m.\u001b[39;49mshape[\u001b[39m1\u001b[39;49m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     X_pinv \u001b[39m=\u001b[39m inversion_function(X, eps\u001b[39m=\u001b[39meps)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/uni/5-sem/system-modelling/lab-2/lab-2.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39massert\u001b[39;00m isPsevdoInversed(X, X_pinv)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Cannot interpret '188' as a data type"
+     ]
+    }
+   ],
+   "source": [
+    "X = read_image('x1.bmp')\n",
+    "Y = read_image('y4.bmp')\n",
+    "\n",
+    "# Append a row of ones to the input matrix\n",
+    "m = X.shape[1]\n",
+    "X = np.vstack((X, np.ones((1, m))))\n",
+    "print('X:', X)\n",
+    "\n",
+    "A = CalculateOperator(X, Y, PseudoInverseMatrix_MoorePenrose)\n",
+    "print('A:', A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
