--- a/8-sem/MIS/Lab-4.ipynb
+++ b/8-sem/MIS/Lab-4.ipynb
@@ -752,7 +752,7 @@
     "xgb_model = xgb.XGBClassifier(random_state=42, use_label_encoder=False, eval_metric='logloss')\n",
     "\n",
     "start = time.time()\n",
-    "xgb_model.fit(X_train_scaled, y_train)  # X_train_scaled та y_train мають бути попередньо визначені\n",
+    "xgb_model.fit(X_train_scaled, y_train) \n",
     "end = time.time()\n",
     "\n",
     "xgb_training_time = (end - start) * 1000\n",
@@ -994,7 +994,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
